# hackathon-2K25

./: README.md  draft.txt  flowchart_template.html  main.ipynb  main.py  mermaid_base_prompt.txt  mermaid_output.txt  mermaid_output_sample.txt  old_main.py  output.txt  output_pet.txt  pyproject.toml  survey_draft_prompt.txt
utils/: openai.py
